<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HereSay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Connect</string>
    <string name="title_activity_connect">Connect to Locale</string>
    <string name="create_locale">+ Create</string>
    <string name="title_activity_locale_message">Messaging</string>
    <string name="send_text">Send</string>
    <string name="title_activity_create_locale">Create Locale</string>
    <string name="locale_name_hint">Locale Name</string>
    <string name="radius_label">Size</string>
    <string name="set_locked_label">Closed</string>
    <string name="password_label">Password</string>
    <string name="name_label">HereSay</string>
    <string name="swipe_instructions">Swipe Left To Register</string>
    <string name="login_hint">Username</string>
    <string name="login_go">Login</string>
    <string name="create_locale_2">Create</string>
    <string name="kill_service">Kill Service</string>
    <string name="action_refresh">Refresh</string>
    <string name="saved_username">com.shibedev.heresay.username</string>

    <string-array name="radius_names">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="title_activity_location">LocationActivity</string>

</resources>
