<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateLocaleActivity" >

    <EditText
        android:id="@+id/locale_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/locale_name_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/create_locale"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:id="@+id/radius_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locale_name"
        android:layout_alignBottom="@+id/radius_spinner"
        android:layout_below="@+id/locale_name"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/radius_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/radius_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/locale_name"
        android:layout_below="@+id/locale_name"
        android:layout_toRightOf="@+id/radius_label" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_closed"
        android:layout_alignRight="@+id/radius_spinner"
        android:layout_below="@+id/set_closed"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/create_locale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/map"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:onClick="createLocale"
        android:text="@string/create_locale_2" />

    <CheckBox
        android:id="@+id/set_closed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radius_label"
        android:layout_below="@+id/radius_label"
        android:layout_marginTop="23dp"
        android:text="@string/set_locked_label" />

</RelativeLayout>